whitespace, meta in <head>, test push

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
   <head>
+    <meta charset="UTF-8">
     <title>The Tea Cozy</title>
     <link href="../CSS/style.css" type="text/css" rel="stylesheet"/> 
   </head>
@@ -9,7 +10,6 @@
   <body>
 
     <!-- Header -->
-
     <header class="flex-container">
       <img src="https://content.codecademy.com/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="The Tea Cozy logo in cursive">
       <nav>
@@ -20,11 +20,9 @@
     </header>
 
     <!-- Main content -->
-
     <div class="main">
       
       <!-- Mission section -->
-
       <div id="mission" class="flex-container">
         <div class="content">
           <h2>Our Mission</h2>
@@ -36,7 +34,6 @@
         
 
       <!-- Featured section -->
-
       <div id="featured">
         <div>
           <h2>Tea of the Month</h2>
@@ -67,7 +64,6 @@
       </div>
 
       <!-- Locations section -->
-
       <div id="locations">
           <h2>Locations</h2>
           <div class="flex-container locations">
@@ -94,7 +90,6 @@
     </div>
 
     <!-- Contact Section -->
-
     <div id="contact">
       <h2>The Tea Cozy</h2>
       <h5>contact@TheTeaCozy.com</h5>
@@ -102,7 +97,6 @@
     </div>
 
     <!-- Footer Section -->
-
     <footer>
       <h5>copyright The Tea Cozy 2017</h5>
     </footer>
